--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "grunt",
     "start": "grunt && node ./dist/app.js",
-    "test": "mocha --colors --require babel-core/register",
+    "test": "mocha --colors --compilers babel-core/register",
+    "test-cov": "babel-node ./node_modules/.bin/isparta cover _mocha -- -R spec",
     "build": "grunt build"
   },
   "repository": {
@@ -20,12 +21,15 @@
   },
   "homepage": "https://github.com/neungkl/2110316-verbal-language#readme",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-typecheck": "^3.9.0",
     "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
+    "codecov": "^1.0.1",
     "glob": "^7.1.1",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
@@ -33,6 +37,8 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-flow": "^1.0.3",
     "grunt-webpack": "^1.0.18",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
